Fetching film sources && New film structs
