# film/models.go
@@ -1,8 +1,24 @@
 package film
 
 type FilmSource struct {
+	Link string `json:"link"`
+	Type string `json:"type"`
+}
+
+type FilmServer struct {
 	ServerName string `json:"serverName"`
 	LinkID     string `json:"linkID"`
+}
+
+type FilmSources struct {
+    Sources string `json:"sources"`
+    Tracks  []struct {
+        File    string `json:"file"`
+        Label   string `json:"label,omitempty"`
+        Kind    string `json:"kind"`
+        Default bool   `json:"default,omitempty"`
+    } `json:"tracks"`
+    Server int `json:"server"`
 }
 
 // FilmResponse is the response struct
@@ -17,22 +33,22 @@ type FilmSearchResponse struct {
 type FilmSearch struct {
 	Href        string   `json:"href" example:"https://example.com/film/1"`
 	Poster      string   `json:"poster" example:"https://example.com/poster/1.jpg"`
-	Title       string   `json:"title" example:"https://example.com/2.jpg"`
-	Description string   `json:"description" example:"https://example.com/description"`
-	Duration    string   `json:"duration" example:"https://example.com/duration"`
-	Country     []string `json:"country" example:"https://example.com/country"`
-	Production  []string `json:"production" example:"https://example.com/production"`
-	Id          string   `json:"id" example:"film-1"`
+	Title       string   `json:"title" example:"Film"`
+	Description string   `json:"description" example:"Description"`
+	Duration    string   `json:"duration" example:"0 min"`
+	Country     []string `json:"country" example:"country"`
+	Production  []string `json:"production" example:"production"`
+	Id          string   `json:"id" example:"movie/film-1"`
 	IdParts     IdSplit  `json:"idParts"`
-	Cast        []string `json:"casts" example:"film-2"`
-	Genres      []string `json:"genres" example:"film-3"`
-	Released    string   `json:"released" example:"https://example.com/released"`
+	Cast        []string `json:"casts" example:"cast"`
+	Genres      []string `json:"genres" example:"genre"`
+	Released    string   `json:"released" example:"2000"`
 }
 
 // IdSplit stores the film ID parts
 // @Description stores the film ID parts
 type IdSplit struct {
-	Type  string `json:"type" example:"film"`
-	Name  string `json:"name" example:"Film 1"`
+	Type  string `json:"type" example:"movie"`
+	Name  string `json:"name" example:"film"`
 	IdNum int    `json:"idNum" example:1`
 }
